--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,39 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.buddies.carpool"
-    android:versionCode="1"
-    android:versionName="1.0" >
-
-    <uses-sdk
-        android:minSdkVersion="10"
-        android:targetSdkVersion="16" />
-
-    <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <activity
-            android:name="com.buddies.carpool.HomeScreenActivity"
-            android:label="@string/app_name" >
+          package="com.buddies.PoolMeIn"
+          android:versionCode="1"
+          android:versionName="1.0">
+    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+        <activity android:name=".HomeScreenActivity"
+                  android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-                android:name="com.buddies.carpool.GreetInNewActivity"
+                android:name=".GreetInNewActivity"
                 android:label="@string/greet_me_here" >
         </activity>
         <activity
-                android:name="com.buddies.carpool.NeedACarActivity"
+                android:name=".NeedACarActivity"
                 android:label="@string/greet_me_here" >
         </activity>
         <activity
-                android:name="com.buddies.carpool.HaveACarActivity"
+                android:name=".HaveACarActivity"
                 android:label="@string/greet_me_here" >
         </activity>
-    </application>
 
+    </application>
 </manifest>
